Added support for PDF files

--- a/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
+++ b/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
@@ -610,7 +610,7 @@
       ],
       "source": [
         "vector_db.search_by_text(\"What is the Michael Eisner Memorial Weak Executive Problem?\", k=3)\n",
-        "vector_db.search_by_text(\"What is the polic for sick leaves?\", k=3)"
+        "vector_db.search_by_text(\"What is the policy for sick leaves?\", k=3)"
       ]
     },
     {
@@ -987,9 +987,16 @@
         }
       ],
       "source": [
-        "retrieval_augmented_qa_pipeline.run_pipeline(\"What is the policy for sick leaves?\")\n",
-        "retrieval_augmented_qa_pipeline.run_pipeline(\"What is the Michael Eisner Memorial Weak Executive Problem?\")\n",
-        "\n"
+        "retrieval_augmented_qa_pipeline.run_pipeline(\"What is the policy for sick leaves?\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "retrieval_augmented_qa_pipeline.run_pipeline(\"What is the Michael Eisner Memorial Weak Executive Problem?\")"
       ]
     },
     {
