--- a/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
+++ b/02_Embeddings_and_RAG/Pythonic_RAG_Assignment.ipynb
@@ -479,7 +479,12 @@
         "The default embedding dimension of `text-embedding-3-small` is 1536, as noted above. \n",
         "\n",
         "1. Is there any way to modify this dimension?\n",
+        "Yes, you can modify the dimension of the \"text-embedding-3-small\" model by using the \"dimensions\" parameter when calling the OpenAI API; this allows you to specify a lower dimensional embedding vector while still utilizing the \"text-embedding-3-small\" model, which by default has a 1536-dimensional embedding. Reducing the dimension can slightly impact the accuracy of the embedding, but can significantly improve processing speed and storage efficiency\n",
+        "\n",
         "2. What technique does OpenAI use to achieve this?\n",
+        "Open AI uses a technique (MRL) to train the models that allow developers to trade off performance and cost of using embeddings. Developers can shorten embeddings without the embedding losing its concept representing properties by passing the dimensions API parameter.\n",
+        "\n",
+        "MRL which encodes information at different granularities and allows a single embedding to adapt to the computational constraints of downstream tasks.  MRL minimally modifies existing representation learning pipelines and imposes no additional cost during inference and deployment. MRL learns coarse-to-fine representations that are at least as accurate and rich as independently trained low-dimensional representations\n",
         "\n",
         "> NOTE: Check out this [API documentation](https://platform.openai.com/docs/api-reference/embeddings/create) for the answer to question #1, and [this documentation](https://platform.openai.com/docs/guides/embeddings/use-cases) for an answer to question #2!"
       ]
@@ -540,6 +545,7 @@
         "#### ❓Question #2:\n",
         "\n",
         "What are the benefits of using an `async` approach to collecting our embeddings?\n",
+        "async allows to perform I/O operations without blocking the execution of rest of your code. With async you can handle multiple concurrent operations.\n",
         "\n",
         "> NOTE: Determining the core difference between `async` and `sync` will be useful! If you get stuck - ask ChatGPT!"
       ]
@@ -802,6 +808,7 @@
         "#### ❓ Question #3:\n",
         "\n",
         "When calling the OpenAI API - are there any ways we can achieve more reproducible outputs?\n",
+        "To achieve more reproducable outputs when calling the OpenAI API, the primary method is to set the \"seed\" parameter to be specific integer value across all the requests. Also keep all other parameters like temperature, max_tokens and prompt identical across calls.\n",
         "\n",
         "> NOTE: Check out [this section](https://platform.openai.com/docs/guides/text-generation/) of the OpenAI documentation for the answer!"
       ]
@@ -1011,6 +1018,11 @@
         "What prompting strategies could you use to make the LLM have a more thoughtful, detailed response?\n",
         "\n",
         "What is that strategy called?\n",
+        "Strategies:\n",
+        "1. Use one shot, few shot learning in prompt.\n",
+        "2. Using structured output formats\n",
+        "3. Asking model to think step by step\n",
+        "4. Give clear prompt\n",
         "\n",
         "> NOTE: You can look through the Week 1 Day 1 \"Prompting OpenAI Like A Developer\" material for an answer to this question!"
       ]
