--- a/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
+++ b/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
@@ -1542,14 +1542,44 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "E_LRYXvvRjOp"
+        "id": "E_LRYXvvRjOp",
+        "vscode": {
+          "languageId": "html"
+        }
       },
       "source": [
         "#### ❓ Question #4:\n",
         "LangGraph's graph-based approach lets us visualize and manage complex flows naturally. How could we extend our current implementation to handle edge cases? For example:\n",
+        "\n",
         "- What if the retriever finds no relevant context?  \n",
+        "\n",
+        "Answer:\n",
+        "We can add fallback node which will ask user to enter relevant query in case the user prompts the LLM with irrelevant query. \n",
+        "We can add conditional edge from retrieve node to generate and fallback node. \n",
+        "The conditional edge will check if the context is retrieved from LLM based on users query. \n",
+        "If no context is retrieved, the fallback node will be called from retrieve node (sad path :( ). \n",
+        "If context is retrieved, then generate node will be called from retrieve node to fetch the response from LLM (happy path :)).\n",
+        "Both fallback and generate node have edge to the END node.\n",
+        "\n",
+        "\n",
         "- What if the response needs fact-checking?\n",
-        "Consider how you would modify the graph to handle these scenarios."
+        "\n",
+        "Answer:\n",
+        "We can insert a validate node after the generate node.\n",
+        "Once generate node generates response from LLM based on user's query, it will pass that response to validate node. \n",
+        "The validate node will prompt LLM to validate the response received from generate node. \n",
+        "If the validation passes, the execution is routed to the END node.\n",
+        "If the validation does not pass, the execution is routed to the fallback node which displays a message to the user to change the prompt as the validation of the response of the previous prompt failed.\n",
+        "\n",
+        "Consider how you would modify the graph to handle these scenarios.\n",
+        "\n",
+        "Answer:\n",
+        "See the new lang graph with fallback and validate node in 04_Production_RAG/new_lang_graph.md file.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     }
   ],
