--- a/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
+++ b/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
@@ -198,6 +198,23 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Answer: \n",
+        "We can use the following models:\n",
+        "1. GPT-4o\n",
+        "2. GPT-4o mini\n",
+        "3. o1 and o1-mini\n",
+        "4. GPT-4 Turbo and GPT4\n",
+        "5. GPT-3.5 Turbo\n",
+        "\n",
+        "We need to pass the name of the model as model value in the argument of ChatOpenAI.\n",
+        "For eg:\n",
+        "ChatOpenAI(model=\"gpt-4o-mini\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9nU8SlHfH41T"
       },
@@ -1055,6 +1072,14 @@
         "What does LCEL do that makes it more reliable at scale?\n",
         "\n",
         "> HINT: Use your newly created `simple_rag` to help you answer this question!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Answer:\n",
+        "LCEL provides streaming capability, parallel processing, consistency and customization, error handling and retries which are needed to handle large volume of data."
       ]
     },
     {
