Added answer to the activity

--- a/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
+++ b/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
@@ -793,6 +793,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Answer:\n",
+        "Chunking ideas to split large single document into smaller document:\n",
+        "1. Dcoument specific chunking: It takes into consider the structure of the document. It creates chunks that align with the logical sections of the document like paragraphs or sub sections. It maintains organization of the content and retrieved information is more relevant and useful in case of structured documents with clearly defined sections.\n",
+        "2. Semantic chunking: It considers relation within the text. It chunks the text into meaningful and semantically complete chunks. This ensures informations integrity during retrieval.\n",
+        "3. Agentic chunking: It simulates human judgement in text segmentation to create semantically coherent chunks. IT uses an LLM to create chunks\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "rj18Rjafhp7d"
       },
@@ -810,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 37,
       "metadata": {
         "id": "quNjOLWspOVN"
       },
