Added activit answers

--- a/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
+++ b/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
@@ -784,11 +784,7 @@
         "\n",
         "While there's nothing specifically wrong with the chunking method used above - it is a naive approach that is not sensitive to specific data formats.\n",
         "\n",
-        "Brainstorm some ideas that would split large single documents into smaller documents.\n",
-        "\n",
-        "1. `YOUR IDEA HERE`\n",
-        "2. `YOUR IDEA HERE`\n",
-        "3. `YOUR IDEA HERE`"
+        "Brainstorm some ideas that would split large single documents into smaller documents.\n"
       ]
     },
     {
@@ -1105,6 +1101,8 @@
         "\n",
         "In LangChain, a Runnable is like a LEGO brick in your AI application - it's a standardized component that can be easily connected with other components. The real power of Runnables comes from their ability to be combined in flexible ways using LCEL (LangChain Expression Language).\n",
         "\n",
+        "Runnable is a standardize component that can be easily connected with other components. Runnables can be combined in a flexible ways using LCEL. They are building blocks of the LLM application.\n",
+        "\n",
         "## Key Features of Runnables\n",
         "\n",
         "### 1. Universal Interface\n",
@@ -1181,14 +1179,21 @@
       "source": [
         "### Primer: What is LangGraph?\n",
         "LangGraph is a tool that leverages LangChain Expression Language to build coordinated multi-actor and stateful applications that includes cyclic behaviour.\n",
+        "Langgraph is a framework that allows developers to create multi-agent applications using graph-based models\n",
         "\n",
         "#### Why Cycles?\n",
         "In essence, we can think of a cycle in our graph as a more robust and customizable loop. It allows us to keep our application agent-forward while still giving the powerful functionality of traditional loops.\n",
         "\n",
         "Due to the inclusion of cycles over loops, we can also compose rather complex flows through our graph in a much more readable and natural fashion. Effectively allowing us to recreate application flowcharts in code in an almost 1-to-1 fashion.\n",
         "\n",
+        "A cycle refers to the graph structure where nodes are connected in such a way that it is possible to return to the starting node creating loops or cycles.\n",
+        "\n",
+        "Cycles enable langgraph to create agent like system that can loop back and re-evaluate decisions based on new data.\n",
+        "\n",
         "#### Why LangGraph?\n",
         "Beyond the agent-forward approach - we can easily compose and combine traditional \"DAG\" (directed acyclic graph) chains with powerful cyclic behaviour due to the tight integration with LCEL. This means it's a natural extension to LangChain's core offerings!\n",
+        "\n",
+        "With langgraph we can easily compose and combine \"DAG\" chains with powerful cyclic behaviour due to the tight interaction with LECL\n",
         "\n",
         "> NOTE: We're going to focus on building a simple DAG for today's assignment as an introduction to LangGraph"
       ]
