added answers for assignment5

--- a/05_Our_First_Agent_with_LangGraph/Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
+++ b/05_Our_First_Agent_with_LangGraph/Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 22,
       "metadata": {
         "id": "oeXdQgbxwhTv"
       },
@@ -901,7 +901,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "id": "CbagRuJop83E"
       },
@@ -937,7 +937,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "metadata": {
         "id": "RLfrZrgSsn85"
       },
@@ -974,8 +974,8 @@
         "> NOTE: Feel free to indicate if this is problematic or not\n",
         "\n",
         "Answer:\n",
-        "The correct answer and associated with the question in the order of the questions. \n",
-        "This can problematic because the dataset will become hard to manage as it grows. The better approach is to create a dataset  as below:\n",
+        "The correct answer are associated with the question in the order of the questions. \n",
+        "This can problematic because the dataset will become hard to manage as it grows. The better approach is to create a dataset as below:\n",
         "\n",
         "dataset = [\n",
         "    {\n",
@@ -1002,25 +1002,7 @@
         "        \"question\": \"Who was the first female pilot to fly solo across the Atlantic Ocean?\"\n",
         "        \"answer\":{\"must_mention\": [\"Amelia\", \"Earhart\"]}\n",
         "    }\n",
-        "]\n",
-        "\n",
-        "questions = [\n",
-        "    \"Who was the first person to fly an airplane?\",\n",
-        "    \"What year did the Wright brothers achieve the first powered flight?\",\n",
-        "    \"What was the name of the first supersonic passenger jet?\",\n",
-        "    \"Which aircraft is known as the 'Queen of the Skies'?\",\n",
-        "    \"What was the purpose of the Concorde aircraft?\",\n",
-        "    \"Who was the first female pilot to fly solo across the Atlantic Ocean?\"\n",
-        "]\n",
-        "\n",
-        "answers = [\n",
-        "    {\"must_mention\": [\"Wright\", \"brothers\"]},\n",
-        "    {\"must_mention\": [\"1903\", \"Kitty Hawk\"]},\n",
-        "    {\"must_mention\": [\"Concorde\", \"supersonic\"]},\n",
-        "    {\"must_mention\": [\"Boeing\", \"747\"]},\n",
-        "    {\"must_mention\": [\"speed\", \"transatlantic\"]},\n",
-        "    {\"must_mention\": [\"Amelia\", \"Earhart\"]}\n",
-        "]\n"
+        "]"
       ]
     },
     {
@@ -1038,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 20,
       "metadata": {
         "id": "QrAUXMFftlAY"
       },
@@ -1064,7 +1046,9 @@
         "\n",
         "What are some ways you could improve this metric as-is?\n",
         "\n",
-        "> NOTE: Alternatively you can suggest where gaps exist in this method."
+        "> NOTE: Alternatively you can suggest where gaps exist in this method.\n",
+        "\n",
+        "Answer: Conside using semantic similarity for matching. Currently, the code checks if all required phrases are present in the predication. If all required phrases are found, score = True, otherwise score = False. The bteer approach would be to calculate score in numbers and not boolean."
       ]
     },
     {
@@ -1104,28 +1088,29 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/mnt/c/Users/deepa/AI Makerspace/code/AIE5/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "View the evaluation results for experiment: 'RAG Pipeline - Evaluation - 1da2-0787318b' at:\n",
-            "https://smith.langchain.com/o/117cfda3-8a09-4ba4-9922-07b45fd73803/datasets/dd6288a8-c169-4e13-9060-da725bdba9db/compare?selectedSessions=6bc9839d-36f3-421c-806e-2cb25eb552c5\n",
+            "View the evaluation results for experiment: 'RAG Pipeline - Evaluation - 5e49-9a5750bd' at:\n",
+            "https://smith.langchain.com/o/b00bc9bf-caef-4f0e-a803-13dbe51efe46/datasets/fcd9eedf-9b57-4805-b037-a01b33107b57/compare?selectedSessions=22651f27-a0d8-49dc-8155-736eed9ab17e\n",
             "\n",
             "\n"
           ]
         },
         {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "efcf57067cf743d8b4ce059a61cbe02e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "0it [00:00, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "6it [00:12,  2.08s/it]\n"
+          ]
         }
       ],
       "source": [
@@ -1140,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1153,107 +1138,10 @@
         {
           "data": {
             "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>inputs.question</th>\n",
-              "      <th>outputs.output</th>\n",
-              "      <th>error</th>\n",
-              "      <th>reference.must_mention</th>\n",
-              "      <th>feedback.must_mention</th>\n",
-              "      <th>execution_time</th>\n",
-              "      <th>example_id</th>\n",
-              "      <th>id</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>What significant improvements does the LoRA sy...</td>\n",
-              "      <td>The LoRA (Low-Rank Adaptation) system has made...</td>\n",
-              "      <td>None</td>\n",
-              "      <td>[reduce, parameters]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>10.351338</td>\n",
-              "      <td>57157f9e-abf5-4b41-9109-319c533545f2</td>\n",
-              "      <td>5c1f65e2-d06a-407b-bbc1-ba10ef613ee0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>What is the most popular deep learning framework?</td>\n",
-              "      <td>The most popular deep learning framework in 20...</td>\n",
-              "      <td>None</td>\n",
-              "      <td>[PyTorch, TensorFlow]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>4.420087</td>\n",
-              "      <td>129c278c-c295-4801-9c07-8fb71a12856d</td>\n",
-              "      <td>d2638945-8c63-4c20-a7b0-ff14ed21af85</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Who authored the QLoRA paper?</td>\n",
-              "      <td>The QLoRA paper titled \"Accurate LoRA-Finetuni...</td>\n",
-              "      <td>None</td>\n",
-              "      <td>[Tim, Dettmers]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>4.345255</td>\n",
-              "      <td>0a888859-b404-4cdd-91bd-2037aa802711</td>\n",
-              "      <td>fed88a30-0d8f-47a3-8cb1-4d0f0547d76c</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>What is a Retrieval Augmented Generation system?</td>\n",
-              "      <td>A Retrieval Augmented Generation (RAG) system ...</td>\n",
-              "      <td>None</td>\n",
-              "      <td>[ground, context]</td>\n",
-              "      <td>False</td>\n",
-              "      <td>6.487132</td>\n",
-              "      <td>5e58dfe6-8722-4466-b819-adc52904644d</td>\n",
-              "      <td>8526f737-4e13-48f0-8785-77e5ed5c236a</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>What data type was created in the QLoRA paper?</td>\n",
-              "      <td>In the QLoRA paper, a new data type called \"4-...</td>\n",
-              "      <td>None</td>\n",
-              "      <td>[NF4, NormalFloat]</td>\n",
-              "      <td>True</td>\n",
-              "      <td>4.288050</td>\n",
-              "      <td>0be0e226-1730-4e52-a4dc-0691ad798afb</td>\n",
-              "      <td>d218bcc7-8952-4799-963c-a5a9264a6916</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>What optimizer is used in QLoRA?</td>\n",
-              "      <td>QLoRA uses \"paged optimizers\" to manage memory...</td>\n",
-              "      <td>None</td>\n",
-              "      <td>[paged, optimizer]</td>\n",
-              "      <td>True</td>\n",
-              "      <td>6.513946</td>\n",
-              "      <td>02d4d334-e7cf-417e-bcae-7e248395aa0a</td>\n",
-              "      <td>6cb3cd88-dc0d-4d2c-905e-44819cb751e5</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
+              "<ExperimentResults RAG Pipeline - Evaluation - 5e49-9a5750bd>"
             ],
             "text/plain": [
-              "<ExperimentResults RAG Pipeline - Evaluation - 1da2-0787318b>"
+              "<ExperimentResults RAG Pipeline - Evaluation - 5e49-9a5750bd>"
             ]
           },
           "execution_count": 24,
@@ -1337,7 +1225,7 @@
         "id": "M6rN7feNVn9f"
       },
       "source": [
-        "##### YOUR MARKDOWN HERE"
+        "The StateGraph is created with AgentState type. We add two nodes, one for the agent (to call model) and the other for actions (tool node)"
       ]
     },
     {
@@ -1375,7 +1263,7 @@
         "id": "XZ22o2mWVrfp"
       },
       "source": [
-        "##### YOUR MARKDOWN HERE"
+        "This define the entry point of the graph. The graph will start processing beginning with the agent node."
       ]
     },
     {
@@ -1410,7 +1298,7 @@
         "id": "rsXeF6xlaXOZ"
       },
       "source": [
-        "##### YOUR MARKDOWN HERE"
+        "This function checks if we need to use tools by checking if tool_calls exists in last_message. If it does, then it returns action tool. It also checks if the length of messages in the state is greater than 10. If yes, then it returns END to prevent a loop. It then invokes helpfullness check prompt to compare the final_response with initial_query using gpt-4 and returns continue or end depending on if it found the final response helpful or not. If continue is returned, it will continue the loop to find the helpful answer until message count limit is reached."
       ]
     },
     {
@@ -1467,7 +1355,10 @@
       "source": [
         "####🏗️ Activity #4:\n",
         "\n",
-        "Please write what is happening in our `tool_call_or_helpful` function!"
+        "Please write what is happening in our `tool_call_or_helpful` function!\n",
+        "\n",
+        "Answer:\n",
+        "This function checks if we need to use tools by checking if tool_calls exists in last_message. If it does, then it returns action tool. It also checks if the length of messages in the state is greater than 10. If yes, then it returns END to prevent a loop. It then invokes helpfullness check prompt to compare the final_response with initial_query using gpt-4 and returns continue or end depending on if it found the final response helpful or not. If continue is returned, it will continue the loop to find the helpful answer until message count limit is reached."
       ]
     },
     {
@@ -1476,7 +1367,10 @@
         "id": "6BhnBW2YVsJO"
       },
       "source": [
-        "##### YOUR MARKDOWN HERE"
+        "The below code adds logic to route in the chain. It routes to the \n",
+        "1. agent if the final reponse is not much helpful and needs improvment. \n",
+        "2. action if tools are needed\n",
+        "3. end if the max loop limit is reached or if the final response is helpful"
       ]
     },
     {
@@ -1519,7 +1413,7 @@
         "id": "ZGDLEWOIVtK0"
       },
       "source": [
-        "##### YOUR MARKDOWN HERE"
+        "The following code created an edge between action node to the agent node after using the tool."
       ]
     },
     {
@@ -1554,7 +1448,7 @@
         "id": "rSI8AOaEVvT-"
       },
       "source": [
-        "##### YOUR MARKDOWN HERE"
+        "The following code compiles our graph which has an agent with helpful response check capability."
       ]
     },
     {
@@ -1574,7 +1468,7 @@
         "id": "F67FGCMRVwGz"
       },
       "source": [
-        "##### YOUR MARKDOWN HERE"
+        "The following code tests out graph_with_helpfulness_check with a query."
       ]
     },
     {
