--- a/05_Our_First_Agent_with_LangGraph/Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
+++ b/05_Our_First_Agent_with_LangGraph/Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
@@ -1048,7 +1048,7 @@
         "\n",
         "> NOTE: Alternatively you can suggest where gaps exist in this method.\n",
         "\n",
-        "Answer: Conside using semantic similarity for matching. Currently, the code checks if all required phrases are present in the predication. If all required phrases are found, score = True, otherwise score = False. The bteer approach would be to calculate score in numbers and not boolean."
+        "Answer: Conside using semantic similarity for matching. Currently, the code checks if all required phrases are present in the predication. If all required phrases are found, score = True, otherwise score = False. The better approach would be to calculate score in numbers and not boolean."
       ]
     },
     {
